--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -8,11 +8,23 @@
   </head>
   <body>
     <div id="content">
-      <h1>My Portfolio</h1>
+      <h1>Kiara's Portfolio</h1>
       <p>This is my portfolio.</p>
       <p>Click here to get a random message:</p>
       <button onclick="addRandomGreeting()">Hello</button>
       <div id="greeting-container"></div>
+
+      <p> My name is Kiara Sims. I am a upcoming junior Computer Science major at Xavier University of Louisiana
+          I was born, partially raised and living in New Orleans. After hurricane Katrina, I moved to Mississippi
+          by my grandfather side of the family. I lived in Mississippi until I was in the 7th grade then moved back 
+          to New Orleans for the rest of my school years and college.</p> 
+      <ol> 
+          <li> Image Filters</li>
+          <li> Digital photograph album</li>
+      </ol>
+
+      
+        
     </div>
   </body>
 </html>
