add github link.

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -23,7 +23,9 @@
           <li> Digital photograph album</li>
       </ol>
 
-      
+      <a href="https://github.com/kiarasims"> Visit my GitHub here </a>
+
+
         
     </div>
   </body>
