Add background and border.

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -6,8 +6,8 @@
     <link rel="stylesheet" href="style.css">
     <script src="script.js"></script>
   </head>
-  <body>
-    <div id="content" id= "border">
+  <body id="background">
+    <div id="content">
       <h1>Kiara's Portfolio</h1>
       <p>This is my portfolio.</p>
       <p>Click here to get a random message:</p>
