--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -14,7 +14,7 @@
       <button onclick="addRandomGreeting()">Hello</button>
       <div id="greeting-container"></div>
 
-      <p> My name is Kiara Sims. I am a upcoming junior Computer Science major at Xavier University of Louisiana
+      <p> My name is Kiara Sims. I am a upcoming junior Computer Science major at Xavier University of Louisiana.
           I was born, partially raised and living in New Orleans. After hurricane Katrina, I moved to Mississippi
           by my grandfather side of the family. I lived in Mississippi until I was in the 7th grade then moved back 
           to New Orleans for the rest of my school years and college.</p> 
